fix: Fixed the padding
The section was too close to the footer

--- a/plant-peace-web/clerk-react/src/components/Sale/Sale.module.css
+++ b/plant-peace-web/clerk-react/src/components/Sale/Sale.module.css
@@ -42,6 +42,7 @@
   .container {
     background-color: var(--white);
     width: 100vw;
+    padding-bottom: 100px;
   }
   
   /* Exemplo para telas grandes */
